# photonscape

./: .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  photonscape.py  pyproject.toml
scripts/: animate.py
static/: app.js  index.html  style.css
